Fixed: In reports IE6 did shift	issues to the left more and more.
git-svn-id: svn+ssh://scm.wald.intevation.org/openvas/trunk/gsa@7456 423fd1db-d629-0410-8442-d21db03e70f4

--- a/src/html/src/IE6fixes.css
+++ b/src/html/src/IE6fixes.css
@@ -37,3 +37,9 @@
 div.float_right {
   float:right; position:relative;
 }
+.issue_box_head {
+  padding-bottom:0;
+}
+.issue_box_head div {
+  padding-bottom:4px;
+}
